# Android_Template

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  google-services.json  proguard-rules.pro
app/libs/: test_module_for_aar_compile-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dog_kind.csv
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/jni_libs/jni_string_test/: native_wrapper_jni_string_test.cpp
app/src/main/cpp/jni_libs/opencv_test/: native_wrapper_opencv_test.cpp
app/src/main/cpp/third_libs/dlib_19_23/include/dlib/: config.h
app/src/main/cpp/third_libs/dlib_19_23/lib/arm64-v8a/cmake/dlib/: dlib.cmake  dlibConfigVersion.cmake
app/src/main/cpp/third_libs/dlib_19_23/lib/armeabi-v7a/cmake/dlib/: dlib-release.cmake  dlibConfig.cmake
app/src/main/cpp/third_libs/dlib_19_23/lib/armeabi-v7a/pkgconfig/: dlib-1.pc
app/src/main/cpp/third_libs/dlib_19_23/lib/x86/cmake/dlib/: dlibConfigVersion.cmake
app/src/main/res/drawable-v24/: background_activity_basic_bottom_sheet_navigation_sample_bottom_nav_item_icon_tint.xml  background_activity_basic_recycler_view_sample_editor_content_title.xml  background_activity_click_effect_sample_background_click.xml  background_activity_easy_lut_sample_filter_list_container.xml  background_activity_easy_lut_sample_image2_container.xml  background_activity_pinch_image_list_viewer_page_container.xml  background_activity_pinch_image_view_list_sample_image_box.xml  background_activity_user_login_sample_google_login_btn.xml  background_activity_user_login_sample_kakao_login_btn.xml  background_activity_user_sample_list_user_info_container.xml  background_bottom_sheet_dialog_fragment_item_selector1_out_container.xml  background_common_layout_bottom_line.xml  background_dialog_binary_choose_btn_container.xml  background_dialog_binary_choose_upper_container.xml  background_dialog_progress_loading_progress_bar_progress_drawable.xml
app/src/main/res/layout/: activity_a_template.xml  activity_aar_module_caller_sample.xml  activity_basic_bottom_sheet_navigation_sample.xml  activity_basic_camera2_api_sample.xml  activity_basic_header_footer_recycler_view_sample.xml  activity_basic_horizontal_recycler_view_sample.xml  activity_basic_notification_sample.xml  activity_basic_service_sample.xml  activity_basic_tab_layout_sample.xml  activity_basic_vertical_recycler_view_sample.xml  activity_bitmap_and_opencv_jni_sample.xml  activity_brightness_change_sample.xml  activity_broadcast_receiver_sample.xml  activity_broadcast_receiver_sample_sender.xml  activity_camera_sample_list.xml  activity_click_effect_sample.xml  activity_dialog_sample.xml  activity_dp_and_px_calculator.xml  activity_easy_lut_sample.xml  activity_email_user_join_sample.xml  activity_etc_sample_list.xml  activity_firebase_chat_sample_add_channel.xml  activity_firebase_chat_sample_channel_list.xml  activity_firebase_chat_sample_chatting_room.xml  (+53 more)
app/src/main/rs/: crop.rs  rotator.rs
gradle/wrapper/: gradle-wrapper.properties
test_module/: build.gradle
test_module/src/main/: AndroidManifest.xml
test_module_for_aar_compile/: build.gradle
test_module_for_aar_compile/src/main/: AndroidManifest.xml
(+139 files in other folders)
